upgrade to Java 21