@@ -1,6 +1,3 @@
-/**
- * 
- */
 package com.strandls.geoentities;
 
 import java.io.File;
@@ -10,7 +7,7 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.sql.Driver;
 import java.sql.DriverManager;
 import java.sql.SQLException;
@@ -19,8 +16,6 @@ import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-
-import javax.servlet.ServletContextEvent;
 
 import org.glassfish.jersey.servlet.ServletContainer;
 import org.hibernate.SessionFactory;
@@ -39,18 +34,21 @@ import com.strandls.geoentities.services.impl.GeoentitiesServiceModule;
 import com.vividsolutions.jts.geom.GeometryFactory;
 import com.vividsolutions.jts.geom.PrecisionModel;
 
+import jakarta.persistence.Entity;
+import jakarta.servlet.ServletContextEvent;
+import jakarta.servlet.ServletContextListener;
+
 /**
  * @author Abhishek Rudra
- *
  */
-public class GeoentitiesServeletContextListener extends GuiceServletContextListener {
+public class GeoentitiesServletContextListener extends GuiceServletContextListener implements ServletContextListener {
 
-	private static final Logger logger = LoggerFactory.getLogger(GeoentitiesServeletContextListener.class);
+	private static final Logger logger = LoggerFactory.getLogger(GeoentitiesServletContextListener.class);
 
 	@Override
 	protected Injector getInjector() {
 
-		Injector injector = Guice.createInjector(new ServletModule() {
+		return Guice.createInjector(new ServletModule() {
 			@Override
 			protected void configureServlets() {
 
@@ -61,8 +59,7 @@ public class GeoentitiesServeletContextListener extends GuiceServletContextListe
 						configuration.addAnnotatedClass(cls);
 					}
 				} catch (ClassNotFoundException | IOException | URISyntaxException e) {
-					e.printStackTrace();
-					logger.error(e.getMessage());
+					logger.error("Error adding annotated classes: ", e);
 				}
 
 				configuration = configuration.configure();
@@ -71,8 +68,8 @@ public class GeoentitiesServeletContextListener extends GuiceServletContextListe
 				GeometryFactory geofactory = new GeometryFactory(new PrecisionModel(), 4326);
 				bind(GeometryFactory.class).toInstance(geofactory);
 
-				Map<String, String> props = new HashMap<String, String>();
-				props.put("javax.ws.rs.Application", ApplicationConfig.class.getName());
+				Map<String, String> props = new HashMap<>();
+				props.put("jakarta.ws.rs.Application", ApplicationConfig.class.getName());
 				props.put("jersey.config.server.provider.packages", "com");
 				props.put("jersey.config.server.wadl.disableWadl", "true");
 
@@ -82,23 +79,20 @@ public class GeoentitiesServeletContextListener extends GuiceServletContextListe
 				serve("/api/*").with(ServletContainer.class, props);
 			}
 		}, new GeoentitiesControllerModule(), new GeoentitiesDaoModule(), new GeoentitiesServiceModule());
-
-		return injector;
-
 	}
 
 	protected List<Class<?>> getEntityClassesFromPackage(String packageName)
 			throws URISyntaxException, IOException, ClassNotFoundException {
 
 		List<String> classNames = getClassNamesFromPackage(packageName);
-		List<Class<?>> classes = new ArrayList<Class<?>>();
+		List<Class<?>> classes = new ArrayList<>();
 		for (String className : classNames) {
 			Class<?> cls = Class.forName(className);
 			Annotation[] annotations = cls.getAnnotations();
 
 			for (Annotation annotation : annotations) {
-				if (annotation instanceof javax.persistence.Entity) {
-					System.out.println("Mapping entity :" + cls.getCanonicalName());
+				if (annotation instanceof Entity) {
+					logger.info("Mapping entity: {}", cls.getCanonicalName());
 					classes.add(cls);
 				}
 			}
@@ -111,20 +105,26 @@ public class GeoentitiesServeletContextListener extends GuiceServletContextListe
 			throws URISyntaxException, IOException {
 
 		ClassLoader classLoader = Thread.currentThread().getContextClassLoader();
-		ArrayList<String> names = new ArrayList<String>();
-		URL packageURL = classLoader.getResource(packageName);
+		ArrayList<String> names = new ArrayList<>();
+		URL packageURL = classLoader.getResource(packageName.replace('.', '/')); // fixed resource path
+
+		if (packageURL == null) {
+			throw new IOException("Package URL not found for package: " + packageName);
+		}
 
 		URI uri = new URI(packageURL.toString());
 		File folder = new File(uri.getPath());
 
-		Files.find(Paths.get(folder.getAbsolutePath()), 999, (p, bfa) -> bfa.isRegularFile()).forEach(file -> {
-			String name = file.toFile().getAbsolutePath().replaceAll(folder.getAbsolutePath() + File.separatorChar, "")
-					.replace(File.separatorChar, '.');
-			if (name.indexOf('.') != -1) {
-				name = packageName + '.' + name.substring(0, name.lastIndexOf('.'));
-				names.add(name);
-			}
-		});
+		Files.find(Path.of(folder.getAbsolutePath()), Integer.MAX_VALUE, (p, bfa) -> bfa.isRegularFile())
+				.forEach(file -> {
+					String name = file.toFile().getAbsolutePath()
+							.replace(folder.getAbsolutePath() + File.separatorChar, "")
+							.replace(File.separatorChar, '.');
+					if (name.indexOf('.') != -1) {
+						name = packageName + '.' + name.substring(0, name.lastIndexOf('.'));
+						names.add(name);
+					}
+				});
 
 		return names;
 	}
@@ -134,22 +134,23 @@ public class GeoentitiesServeletContextListener extends GuiceServletContextListe
 
 		Injector injector = (Injector) servletContextEvent.getServletContext().getAttribute(Injector.class.getName());
 
-		SessionFactory sessionFactory = injector.getInstance(SessionFactory.class);
-		sessionFactory.close();
+		if (injector != null) {
+			SessionFactory sessionFactory = injector.getInstance(SessionFactory.class);
+			if (sessionFactory != null && !sessionFactory.isClosed()) {
+				sessionFactory.close();
+			}
+		}
 
 		super.contextDestroyed(servletContextEvent);
-		// ... First close any background tasks which may be using the DB ...
-		// ... Then close any DB connection pools ...
 
-		// Now deregister JDBC drivers in this context's ClassLoader:
-		// Get the webapp's ClassLoader
+		// Deregister JDBC drivers loaded by this webapp's ClassLoader to prevent memory
+		// leaks
 		ClassLoader cl = Thread.currentThread().getContextClassLoader();
-		// Loop through all drivers
 		Enumeration<Driver> drivers = DriverManager.getDrivers();
+
 		while (drivers.hasMoreElements()) {
 			Driver driver = drivers.nextElement();
 			if (driver.getClass().getClassLoader() == cl) {
-				// This driver was registered by the webapp's ClassLoader, so deregister it:
 				try {
 					logger.info("Deregistering JDBC driver {}", driver);
 					DriverManager.deregisterDriver(driver);
@@ -157,12 +158,9 @@ public class GeoentitiesServeletContextListener extends GuiceServletContextListe
 					logger.error("Error deregistering JDBC driver {}", driver, ex);
 				}
 			} else {
-				// driver was not registered by the webapp's ClassLoader and may be in use
-				// elsewhere
 				logger.trace("Not deregistering JDBC driver {} as it does not belong to this webapp's ClassLoader",
 						driver);
 			}
 		}
-
 	}
 }
